# banking_widget

./: .flake8  README.md  pyproject.toml  requirements.txt
src/: masks.py  processing.py  widget.py
tests/: test_masks.py  test_widget.py
